<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:id="@+id/rootContainer"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">


        <ImageView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/gambar_content"
            android:layout_marginTop="10dp"
            android:id="@+id/gambar"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_image_24"/>

        <TextView
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/gambar"
            app:layout_constraintStart_toStartOf="@id/gambar"
            app:layout_constraintTop_toBottomOf="@id/gambar"
            android:id="@+id/namaCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_gravity="center" />

        <TextView
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/namaCrew"
            app:layout_constraintStart_toStartOf="@id/namaCrew"
            app:layout_constraintTop_toBottomOf="@id/namaCrew"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingEnd="5dp"
            android:ellipsize="marquee"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:id="@+id/characterCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_developer"
            android:textSize="15sp"
            android:layout_gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>