<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerLayoutDetail"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:scaleType="fitXY"
            android:contentDescription="Image Cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="-50dp"
            android:layout_marginEnd="-50dp"
            android:background="@drawable/bg_overlay"
            android:orientation="horizontal"
            android:rotation="-10" />

    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        android:elevation="4dp"
        android:id="@+id/toolbarDetail"
        app:subtitle="Detail"
        app:navigationIcon="@drawable/ic_baseline_close_24"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarTimeTitleAppearance"
        app:title="@string/name_developer" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarDetail"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="5dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="@color/inactivate"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="60dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="marquee"
                                    android:marqueeRepeatLimit="marquee_forever"
                                    android:singleLine="true"
                                    android:textColor="@android:color/black"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/tvVote"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerInParent="true"
                                    android:text="@string/rating"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tvRating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:layout_marginStart="5dp"
                                    android:layout_toEndOf="@id/tvVote"
                                    android:singleLine="true"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                            </RelativeLayout>

                            <RatingBar
                                android:id="@+id/ratingBar"
                                style="@style/Widget.AppCompat.RatingBar.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:progressTint="@color/colorRating" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="150dp"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_baseline_image_24"
                        android:contentDescription="Image Photo" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/genre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenre"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:listitem="@layout/genre_layout" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/inactivate"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvRD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tanggal_rilis"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvRelease"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvRD"
                            android:text="Alumni"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/tvKP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kepopuleran"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPopularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvKP"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/tvDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/storyline"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvOverview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvDesc"
                            android:layout_marginTop="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crew"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp" />


            <ProgressBar
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_cast"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/rv_cast"
                android:padding="5dp"
                tools:listitem="@layout/item_people_layout"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/casting"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/progress_bar_crew" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="5dp"
                tools:listitem="@layout/item_people_layout"
                android:layout_height="wrap_content"
                android:id="@+id/rv_crew"
                android:padding="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/progress_bar_trailer" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                tools:listitem="@layout/item_trailer_layout"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/rv_trailer" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recomendation"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/text_empty"
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/progress_bar_recomendation" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_marginStart="6dp"
                tools:listitem="@layout/list_item_horizontal"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/rv_recomendation"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:focusable="true"
        android:contentDescription="@string/favorite"
        android:clickable="true"
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="170dp"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_marginEnd="10dp"
        tools:ignore="RelativeOverlap">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_share_24"
        android:contentDescription="@string/share" />
</RelativeLayout>