<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/toolbarMovie"
        app:subtitle="@string/about"
        app:navigationIcon="@drawable/ic_baseline_close_24"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarTimeTitleAppearance"
        app:title="@string/name_developer" />

    <include android:id="@+id/showEmpty"
        layout="@layout/empty_view"
        android:visibility="gone" />


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar_detail_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/scroolView"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMovie"
        tools:layout_editor_absoluteX="-9dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <LinearLayout
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/gambarOrangnya"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_baseline_image_24" />

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/nama_orang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gambarOrangnya"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:text="Nama Orang"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tentang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="Tentang"
                        android:textAllCaps="true"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/peran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tentang"
                        android:layout_marginStart="10dp"
                        android:text="Peran"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/riwayat_perfiliman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/peran"
                        android:layout_marginStart="10dp"
                        android:text="Riwayat Perfiliman"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/jenis_kelamin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/riwayat_perfiliman"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Jenis Kelamin"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/jenis_kelamin"
                        android:layout_marginStart="10dp"
                        android:text="@string/empty_data"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/kelahiran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gender"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Kelahiran"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tanggal_kelahiran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/kelahiran"
                        android:layout_marginStart="10dp"
                        android:text="@string/empty_data"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/lokasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tanggal_kelahiran"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Lokasi Kelahiran"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lokasi_kelahiran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lokasi"
                        android:layout_marginStart="10dp"
                        android:text="@string/empty_data"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/biografi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lokasi_kelahiran"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="Biografi"
                        android:textAllCaps="true"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/biografi_orang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/biografi"
                        android:textStyle="normal"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:padding="5dp"
                        android:text="@string/empty_data"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/reputasi_jumlah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tentang"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:text="Jumlah Reputasi"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reputasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/reputasi_jumlah"
                        android:layout_alignStart="@+id/reputasi_jumlah"
                        android:layout_alignEnd="@id/reputasi_jumlah"
                        android:layout_marginTop="5dp"
                        android:text="@string/empty_data"
                        android:textAlignment="center"
                        android:textSize="16sp" />


                </RelativeLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/btnShare"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/share" />


</androidx.constraintlayout.widget.ConstraintLayout>